--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,8 +8,17 @@
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
-    { "src": "/static/media/home/march7thcheer.png", "sizes": "180x180", "type": "image/png" },
-    { "src": "/static/media/home/march7thcheer.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/static/media/home/march7thcheer.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/media/favicon/web-app-manifest-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/media/favicon/web-app-manifest-192x192.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
   ]
 }
